litmask/tests/compile/mask_concat_rejects_unmasked.stderr
error: mask_concat! arguments must be string literals or compile-time-resolvable string macros
  --> tests/compile/mask_concat_rejects_unmasked.rs:10:40
   |
10 |     let _: String = mask_concat!("a-", unmasked!("plain"));
   |                                        ^^^^^^^^
